--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,11 +1,11 @@
 # Pages placed under these sections will be shown on homepage and archive page.
 mainSections = ["post"]
 # Output page's full content in RSS.
-rssFullContent = true
-favicon = "/favicon.png"
+rssFullContent = false
+favicon = "/favicon.svg"
 
 [footer]
-since = 2020
+since = 2026
 customText = ""
 
 [dateFormat]
