--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -10,15 +10,15 @@
 [[social]]
 identifier = "github"
 name = "GitHub"
-url = "https://github.com/CaiJimmy/hugo-theme-stack"
+url = "https://github.com/ruitaopan"
 
-[social.params]
-icon = "brand-github"
 
 [[social]]
-identifier = "twitter"
-name = "Twitter"
-url = "https://twitter.com"
+identifier = "email"
+name = "Email"
+url = "mailto:ruitaopan05@foxmail.com"
 
-[social.params]
-icon = "brand-twitter"
+[[social]]
+identifier = "rss"
+name = "RSS"
+url = "/index.xml"
