--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -12,13 +12,21 @@ identifier = "github"
 name = "GitHub"
 url = "https://github.com/ruitaopan"
 
+[social.params]
+icon = "brand-github"
 
 [[social]]
 identifier = "email"
 name = "Email"
 url = "mailto:ruitaopan05@foxmail.com"
 
+[social.params]
+icon = "mail"
+
 [[social]]
 identifier = "rss"
 name = "RSS"
 url = "/index.xml"
+
+[social.params]
+icon = "rss"
