--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,5 +1,5 @@
 # Pages placed under these sections will be shown on homepage and archive page.
-mainSections = [""]
+mainSections = ["post"]
 # Output page's full content in RSS.
 rssFullContent = false
 favicon = "/favicon.svg"
