--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -68,7 +68,7 @@ enabled = true
 ## Comments
 [comments]
 enabled = true
-provider = "disqus"
+provider = "giscus"
 
 [comments.disqusjs]
 shortname = ""
@@ -119,13 +119,13 @@ serverName = "cactus.chat"
 siteName = ""
 
 [comments.giscus]
-repo = ""
-repoID = ""
-category = ""
-categoryID = ""
-mapping = ""
-lightTheme = ""
-darkTheme = ""
+repo = "ruitaopan/ruitaopan.github.io"
+repoID = "R_kgDOQ9_Shw"
+category = "Comments"
+categoryID = "DIC_kwDOQ9_Sh84C1Qv2"
+mapping = "pathname"
+lightTheme = "light"
+darkTheme = "dark"
 reactionsEnabled = 1
 emitMetadata = 0
 
