--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -13,9 +13,6 @@ defaultContentLanguage = "en"
 # This will make .Summary and .WordCount behave correctly for CJK languages.
 hasCJKLanguage = false
 
-# Change it to your Disqus shortname before using
-# disqusShortname = "hugo-theme-stack"
-
 [pagination]
 pagerSize = 5
 
@@ -23,3 +20,6 @@ pagerSize = 5
 quality = 95
 resampleFilter = "Lanczos"
 anchor = "Smart"
+
+[params]
+  customSCSS = ["scss/custom.scss"]
